cabal-version:      2.4
name:               mazepuzzle
version:            0.1.0.0

author:             AHMAD GHOZI FIDINILLAH
maintainer:         ahmad.ghozi01@ui.ac.id

extra-source-files:
    CHANGELOG.md
    README.md

executable mazepuzzle
    main-is:          Main.hs

    other-modules:
        Drawer,
        MazeGenerator,
        GameState

    build-depends:    
        base ^>=4.16.4.0,
        gloss ==1.13.2.2,
        random==1.2.1.1,
        containers==0.6.5.1
    hs-source-dirs:   app
    default-language: Haskell2010
